<resources>
    <string name="app_name">Weekend</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="lang_id">EN</string>
    <string name="currency">ريال</string>
    <string name="no_internet_connection">Unable to connect to the Internet</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="rationale_location">This app needs access to your location to know where you
        are.
    </string>
    <string name="rationale_sms">This app needs access to your sms to read all your great
        messages.
    </string>
    <string name="rationale_contacts">This app needs access to your contacts so you can contact
        them.
    </string>
    <string name="rationale_external_storage">This app needs access to your external storage to read
        and write.
    </string>
    <string name="rationale_ask_again">This app may not work correctly without the requested
        permissions. Open the app settings screen to modify app permissions.
    </string>
    <string name="skip">SKIP</string>
    <string name="home">Home</string>
    <string name="sign_up_sign_in">Sign up / Sign In</string>
    <string name="search">Search</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_bookings">My Bookings</string>
    <string name="my_profile">My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faqs">FAQs</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="credit">Credit</string>
    <string name="visa_master">Visa Master</string>
    <string name="balance">Balance</string>
    <string name="book_now_and_pay_later">Book Now and pay later</string>
    <string name="register_with_us">Register with Us</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="email_address_mandtory">Email Address*</string>
    <string name="password_mandtory">Password*</string>
    <string name="password">Password</string>
    <string name="confirm_password_mandatory">Confirm Password*</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="enter_other_city">Enter Other City</string>
    <string name="verification_number_will_be_sent_to_you">Verification Number will be sent to
        you.
    </string>
    <string name="i_accept_terms_and_conditions">I accept terms and conditions</string>
    <string name="i_accept">I accept</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="cancel">CANCEL</string>
    <string name="register">REGISTER</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="existing_user">Existing User?</string>
    <string name="login">LOGIN</string>
    <string name="thank_you_for_filling_up_registration_form">Thank You for filling up registration
        form
    </string>
    <string name="your_account_will_be_created_once_">Your account will be created once you verify
        your Mobile No. with us
    </string>
    <string name="verify_mobile_number">VERIFY MOBILE NUMBER</string>
    <string name="verify_mobile_number_l">Verify Mobile Number</string>
    <string name="please_enter_firstname">Please enter firstname</string>
    <string name="please_enter_lastname">Please enter lastname</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_should_not_be_less_than_8_characters">Password should not be less than 8
        characters
    </string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_and_confirm_password_should_not_mismatch">Password and confirm password
        should not mismatch
    </string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="please_accept_terms_and_conditions">
        <![CDATA[Please accept terms & conditions]]></string>
    <string name="you_dont_have_sufficient_fund_in_your_credit_balance">You dont have sufficient fund in your credit balance
    </string>
    <string name="are_you_sure_you_want_to_use_your_current_balance_">Are you sure you want to use your current balance</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="signup">SIGNUP</string>
    <string name="quick_signup">QUICK SIGNUP</string>
    <string name="verify_otp_and_continue_booking">Verify OTP and Continue Booking</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_your_registered_mobile_number_here">Enter your registered Mobile Number
        here
    </string>
    <string name="enter_your_registered_email_address_here">Enter your registered Email Address
        here
    </string>
    <string name="please_enter_the_otp_received">Please enter the OTP received</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email_address">Email Address</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="recover_password_using_email_address">Recover password using Email Address
    </string>
    <string name="recover_password_using_mobile_number">Recover password using Mobile Number
    </string>
    <string name="submit">SUBMIT</string>
    <string name="we_have_sent_an_OTP_">We have sent an OTP on your registered mobile number. Please
        enter it here to reset your password.
    </string>
    <string name="reset_pasword_link_sent">Reset Pasword Link Sent</string>
    <string name="we_have_sent_a_reset_password_link_">We have sent a reset password link to your
        registered Email id.
    </string>
    <string name="please_click_on_it_to_reset_your_password">Please click on it to reset your
        password
    </string>
    <string name="verify">VERIFY</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">UPDATE</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_correct_old_password">Please enter correct old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="new_password_and_confirm_password_should_not_mismatch">New password and confirm
        password should not mismatch
    </string>
    <string name="new_password_should_not_be_less_than_8_characters">New password should not be less
        than 8 characters
    </string>
    <string name="old_password_and_new_password_should_not_be_same">Old password and new password
        should not be same
    </string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="price_range">Price Range</string>
    <string name="we_have_sent_an_OTP_for_verification_on_your_new_mobile_number">We have sent an
        OTP for verification on your new Mobile Number.
    </string>
    <string name="please_enter_it_here_to_get_verified">Please enter it here to get verified
    </string>
    <string name="please_select_city">Please select city</string>
    <string name="please_select_country">Please select country</string>
    <string name="please_select_country_first">Please select country first</string>
    <string name="auto_login">Auto Login</string>
    <string name="allow">ALLOW</string>
    <string name="deny">DENY</string>
    <string name="none">None</string>
    <string name="list_view">List View</string>
    <string name="search_result">Search Result</string>
    <string name="switch_to_list_view">Switch to List View</string>
    <string name="switch_to_map_view">Switch to Map View</string>
    <string name="chalets">Chalets</string>
    <string name="playgroud">ملاعب</string>
    <string name="soccer_fields">Soccer Fields</string>
    <string name="map_view">Map View</string>
    <string name="please_login_first_to_add_or_remove_favorite">Please login first to add or remove
        favorite
    </string>
    <string name="please_login_first_to_submit_report">Please login first to submit report</string>
    <string name="no_chalets_found">No chalets found :(</string>
    <string name="no_soccer_fields_found">No soccer fields found :(</string>
    <string name="report_this_property">Report this Property</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_comment">Please enter comment</string>
    <string name="enter_name">Enter Name</string>
    <string name="please_select_reason">Please select a reason</string>
    <string name="add_your_review">Add Your Review</string>
    <string name="rating">Rating</string>
    <string name="enter_review">Enter Review</string>
    <string name="submit_review">SUBMIT REVIEW</string>
    <string name="please_enter_your_review">Please enter your review</string>
    <string name="you_have_no_reviews">You have no reviews :(</string>
    <string name="property_owner_response">Property Owner Response</string>
    <string name="please_select_rating">Please Select Rating</string>
    <string name="your_review_is_successfully_accepted_by_owner_you_can_not_update_this_review">Your
        review is successfully accepted by property owner. You can\'t update this review
    </string>
    <string name="reviews">Reviews</string>
    <string name="rate_this_property">RATE THIS PROPERTY</string>
    <string name="reviews_">Reviews</string>
    <string name="sunday_wednesday">Sunday, Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="eid_al_fitr">Eid al Fitr</string>
    <string name="eid_al_adha">Eid al Adha</string>
    <string name="downpayment">Downpayment</string>
    <string name="down_payment">Down Payment</string>
    <string name="no_booking_service_available">No Booking Service Available</string>
    <string name="booking_completed">Booking Completed</string>
    <string name="thank_you">Thank You</string>
    <string name="for_booking_with_us">for Booking with us.</string>
    <string name="your_booking_id_is_we345rt56">Your Booking ID is We345Rt56</string>
    <string name="your_booking_id_is">Your Booking ID is</string>
    <string name="cheers">Cheers!</string>
    <string name="ok_thanks">OK, THANKS</string>
    <string name="booking_cancellation_request">Booking Cancellation Request</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="notifications">Notifications</string>
    <string name="clear_all">Clear All</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="you_have_no_notifications">You have no notifications :(</string>
</resources>