<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_243_243_243"
    android:orientation="vertical">

    <com.weekend.views.CustomTextView
        android:id="@+id/tv_thank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_5"
        android:gravity="right"
        android:padding="@dimen/space_5"
        android:text="@string/thank_you_for_filling_up_registration_form"
        android:textColor="@color/color_63_67_72"
        android:textSize="@dimen/txt_14"
        app:font_type="AvenirNextLTPro_Regular_0" />

    <com.weekend.views.CustomTextView
        android:id="@+id/tv_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_5"
        android:gravity="right"
        android:padding="@dimen/space_5"
        android:text="@string/your_account_will_be_created_once_"
        android:textColor="@color/color_63_67_72"
        android:textSize="@dimen/txt_14"
        app:font_type="AvenirNextLTPro_Regular_0" />

    <com.weekend.views.CustomEditText
        android:id="@+id/edt_otp"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_5"
        android:drawableRight="@mipmap/img_forgot_password"
        android:hint="@string/please_enter_the_otp_received"
        android:inputType="number"
        app:font_type="AvenirNextLTPro_Regular_0" />

    <com.weekend.views.CustomTextView
        android:id="@+id/tv_resend_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/space_4"
        android:layout_marginTop="@dimen/space_4"
        android:padding="@dimen/space_10"
        android:text="@string/resend_otp"
        android:textColor="@color/color_35_120_201"
        android:textSize="@dimen/txt_14"
        app:font_type="AvenirNextLTPro_Regular_0" />

    <com.weekend.views.CustomTextView
        android:id="@+id/tv_verify_mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_12"
        android:background="@drawable/btn_blue_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/space_10"
        android:paddingLeft="@dimen/space_60"
        android:paddingRight="@dimen/space_60"
        android:paddingTop="@dimen/space_10"
        android:text="@string/verify_mobile_number"
        android:textColor="@color/color_255_255_255"
        android:textSize="@dimen/txt_14"
        app:font_type="AvenirNextLTPro_Medium" />

</LinearLayout>