<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_243_243_243">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/space_20"
                android:layout_marginRight="@dimen/space_20"
                android:orientation="vertical">

                <com.weekend.views.CustomEditText
                    android:id="@+id/edt_first_name"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_15"
                    android:drawableRight="@mipmap/icon_profile"
                    android:hint="@string/first_name"
                    app:font_type="AvenirNextLTPro_Regular_0" />

                <com.weekend.views.CustomEditText
                    android:id="@+id/edt_last_name"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:drawableRight="@mipmap/icon_profile"
                    android:hint="@string/last_name"
                    app:font_type="AvenirNextLTPro_Regular_0" />

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_12"
                    android:layout_marginRight="2dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/rb_gender_selector"
                        android:checked="true"
                        android:paddingRight="@dimen/space_8"
                        android:text="@string/male"
                        android:textColor="@color/txt_gender_selector" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/space_20"
                        android:button="@drawable/rb_gender_selector"
                        android:paddingRight="@dimen/space_8"
                        android:text="@string/female"
                        android:textColor="@color/txt_gender_selector" />
                </RadioGroup>

                <com.weekend.views.CustomEditText
                    android:id="@+id/edt_email"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_12"
                    android:drawableRight="@mipmap/icon_email"
                    android:hint="@string/email_address_mandtory"
                    android:inputType="textEmailAddress"
                    app:font_type="AvenirNextLTPro_Regular_0" />

                <com.weekend.views.CustomEditText
                    android:id="@+id/edt_pasword"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:drawableRight="@mipmap/icon_password"
                    android:hint="@string/password_mandtory"
                    android:inputType="textPassword"
                    android:textDirection="rtl"
                    app:font_type="AvenirNextLTPro_Regular_0" />

                <com.weekend.views.CustomEditText
                    android:id="@+id/edt_confirm_password"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:drawableRight="@mipmap/icon_password"
                    android:hint="@string/confirm_password_mandatory"
                    android:inputType="textPassword"
                    android:textDirection="rtl"
                    app:font_type="AvenirNextLTPro_Regular_0" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:background="@drawable/bg_white_corner_5">

                    <Spinner
                        android:id="@+id/spinner_isd"
                        style="@style/style_spinner"
                        android:layout_width="@dimen/mobile_code_width"
                        android:layout_height="@dimen/mobile_code_height"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/space_1"
                        android:background="@color/color_255_255_255"
                        android:gravity="center"
                        android:spinnerMode="dropdown"
                        android:textColor="@color/color_105_111_116"
                        android:textSize="@dimen/txt_14" />

                    <com.weekend.views.CustomEditText
                        android:id="@+id/edt_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@id/spinner_isd"
                        android:background="@drawable/bg_white_left_gray_stroke_corner_5"
                        android:drawablePadding="@dimen/space_10"
                        android:drawableRight="@mipmap/icon_mobile_1"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:padding="@dimen/space_10"
                        android:textColor="@color/color_105_111_116"
                        android:textColorHint="@color/color_153_161_168"
                        android:textDirection="rtl"
                        android:textSize="@dimen/txt_14"
                        app:font_type="AvenirNextLTPro_Regular_0" />

                </RelativeLayout>

                <com.weekend.views.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_5"
                    android:gravity="right"
                    android:text="@string/verification_number_will_be_sent_to_you"
                    android:textColor="@color/color_187_21_25"
                    android:textSize="@dimen/txt_10"
                    app:font_type="AvenirNextLTPro_Regular_0" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_20">

                    <com.weekend.views.CustomTextView
                        android:id="@+id/tv_terms_conditions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/tv_i_accept"
                        android:gravity="right"
                        android:text="@string/terms_and_conditions"
                        android:textColor="@color/color_35_120_201"
                        android:textSize="@dimen/txt_11"
                        app:font_type="AvenirNextLTPro_Regular_0" />

                    <com.weekend.views.CustomTextView
                        android:id="@+id/tv_i_accept"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/space_3"
                        android:drawablePadding="@dimen/space_5"
                        android:drawableRight="@drawable/icon_checkbox_selector"
                        android:gravity="center_vertical"
                        android:text="@string/i_accept"
                        android:textColor="@color/color_35_120_201"
                        android:textSize="@dimen/txt_11"
                        app:font_type="AvenirNextLTPro_Regular_0" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_15"
                android:layout_marginRight="@dimen/space_15"
                android:layout_marginTop="@dimen/space_10"
                android:orientation="horizontal">

                <com.weekend.views.CustomTextView
                    android:id="@+id/tv_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_5"
                    android:layout_marginRight="@dimen/space_5"
                    android:layout_weight="0.5"
                    android:background="@drawable/btn_blue_selector"
                    android:gravity="center"
                    android:padding="@dimen/space_10"
                    android:text="@string/register"
                    android:textColor="@color/color_255_255_255"
                    android:textSize="@dimen/txt_14"
                    app:font_type="AvenirNextLTPro_Medium" />

                <com.weekend.views.CustomTextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_5"
                    android:layout_marginRight="@dimen/space_5"
                    android:layout_weight="0.5"
                    android:background="@drawable/btn_gray_selector"
                    android:gravity="center"
                    android:padding="@dimen/space_10"
                    android:text="@string/cancel"
                    android:textColor="@color/color_255_255_255"
                    android:textSize="@dimen/txt_14"
                    app:font_type="AvenirNextLTPro_Medium" />
            </LinearLayout>

            <com.weekend.views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_15"
                android:text="@string/existing_user"
                android:textColor="@color/color_117_117_117"
                android:textSize="@dimen/txt_10"
                app:font_type="AvenirNextLTPro_Regular_0" />

            <com.weekend.views.CustomTextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_5"
                android:gravity="center_vertical"
                android:padding="@dimen/space_5"
                android:text="@string/login"
                android:textColor="@color/color_35_120_201"
                android:textSize="@dimen/txt_12"
                app:font_type="AvenirNextLTPro_Medium" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>