<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_243_243_243"
    android:orientation="vertical">

    <com.weekend.views.CustomTextView
        android:id="@+id/tv_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_5"
        android:gravity="right"
        android:padding="@dimen/space_5"
        android:text="@string/enter_your_registered_email_address_here"
        android:textColor="@color/color_63_67_72"
        android:textSize="@dimen/txt_14"
        app:font_type="AvenirNextLTPro_Regular_0" />

    <com.weekend.views.CustomEditText
        android:id="@+id/edt_email_address"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_5"
        android:drawableRight="@mipmap/img_email_sc14"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:font_type="AvenirNextLTPro_Regular_0" />

    <com.weekend.views.CustomTextView
        android:id="@+id/tv_recover_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_20"
        android:background="@drawable/bg_white_blue_stroke_corner_5"
        android:gravity="center"
        android:padding="@dimen/space_10"
        android:text="@string/recover_password_using_mobile_number"
        android:textColor="@color/color_35_120_201"
        android:textSize="@dimen/txt_14"
        app:font_type="AvenirNextLTPro_Regular_0" />

    <com.weekend.views.CustomTextView
        android:id="@+id/tv_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_20"
        android:background="@drawable/btn_blue_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/space_10"
        android:paddingLeft="@dimen/space_60"
        android:paddingRight="@dimen/space_60"
        android:paddingTop="@dimen/space_10"
        android:text="@string/submit"
        android:textColor="@color/color_255_255_255"
        android:textSize="@dimen/txt_14"
        app:font_type="AvenirNextLTPro_Medium" />
</LinearLayout>